css/main.css
* {
  box-sizing: border-box;
}
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

body,
html,
p,
div,
picture,
section,
h1,
h2,
h3,
h4 {
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

:root {
  font-size: 16px;
  --bg-color: hsl(30, 38%, 92%);
  --green: hsl(158, 36%, 37%);
  --dark-green: hsl(158, 36%, 15%);
  --dark-blue: hsl(212, 21%, 14%);
  --darker-blue: hsl(228, 12%, 48%);
  --white: hsl(0, 0%, 100%);
  --text-color: #333;
  --lighter-text-color: #444;
  --main-font: "Montserrat", sans-serif;
  --secondary-font: "Fraunces", serif;
  line-height: 1.7em;
}

body {
  background-color: var(--bg-color);
  min-height: 100vh;
  color: var(--text-color);
  font-family: var(--main-font);
}

a,
a:hover {
  text-decoration: none;
}
main {
  height: 100vh;
  width: 100%;
}
.cards {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  padding: 20px;
  --card-height: 700px;
  --card-width: 700px;
  --margin-unit: 0.5em;
}

.card {
  display: flex;
  gap: 25px;
  flex-direction: column;
  overflow: hidden;
  background-color: var(--white);
  border-radius: 15px;
  height: var(--card-height);
  width: var(--card-width);
  max-width: 100%;
}

.card .details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-inline: 0 2em;
}
.card .details {
  height: calc(100% - 40px - 200px);
  width: 100%;
  padding-inline: 35px;
}
.card .thumbnail {
  height: 200px;
  width: 100%;
  overflow: hidden;
  position: relative;
}
.card .thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  top: 0;
  right: 0;
  /* object-fit: cover; */
  display: block;
  position: absolute;
  top: 0;
  right: 0;
}
@media screen and (min-width: 500px) {
  .cards {
    --card-height: 800px;
    --card-width: 700px;
    --margin-unit: 0.5em;
  }
  .card {
    gap: 20px;
  }
  .card .details {
    height: calc(100% - 40px - 350px);
  }
  .card .thumbnail {
    height: 350px;
  }
}

@media screen and (min-width: 700px) {
  .cards {
    --card-height: 500px;
    --margin-unit: 1em;
  }
  .card {
    flex-direction: row;
    gap: 30px;
  }
  .card .details {
    width: calc(100% - 40px - 300px);
    height: 100%;
    padding-inline: 0 35px;
    padding-block: 20px;
  }
  .card .thumbnail {
    width: 300px;
    height: 100%;
  }
}

.actions {
  margin-block: var(--margin-unit) 0;
}
.actions .cta {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  background-color: var(--green);
  border-radius: 10px;
  color: var(--white);
  padding-block: 20px;
  transition: 0.3s ease 0.1s;
}

.actions a.cta:hover {
  /* filter: brightness(85%); */
  background-color: var(--dark-green);
}

.card p.info {
  color: var(--lighter-text-color);
  font-size: 0.92rem;
}
.card .title {
  font-family: var(--secondary-font);
  font-size: 2.2rem;
  line-height: 1.2em;
  margin-block: calc(var(--margin-unit) / 2)
    calc(var(--margin-unit) / 2 + 0.2em);
}

.card .price {
  display: flex;
  align-items: center;
  gap: 30px;
  margin-block: calc(var(--margin-unit) * 2);
}

.card .price .current {
  font-size: 2rem;
  color: var(--green);
  font-family: var(--secondary-font);
}

.card .price .old {
  font-size: 1rem;
  color: var(--lighter-text-color);
}

.card .details strong {
  color: var(--lighter-text-color);
  letter-spacing: 4px;
  font-size: 0.9rem;
  font-weight: 500;
}
.hide {
  display: none;
}

